--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-	"name":"theakman2/PromiseOAuth",
+	"name":"theakman2/promiseoauth",
 	"description":"OAuth made easy",
 	"version":"0.9.0-beta",
 	"keywords":[
