--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
 	"name":"theakman2/promiseoauth",
+	"type":"library",
 	"description":"OAuth made easy",
 	"version":"0.9.0-beta",
 	"keywords":[
@@ -9,6 +10,7 @@
 		"twitter"
 	],
 	"license":"GPL-3.0+",
+	"homepage":"https://github.com/theakman2/php-promiseoauth",
 	"authors":[{
 		"name":"A Kazim",
 		"email":"theakman2@hotmail.com"
